<resources>
    <string name="app_name">customlayout1</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_viewpager">ViewPager</string>
    <string name="menu_kakaopay">KakaoPay</string>
    <string name="menu_filters">Filters</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
