<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_viewpager"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_viewpager" />
        <item
            android:id="@+id/nav_kakaopay"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_kakaopay" />
        <item
            android:id="@+id/nav_filtersticker"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_filters" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_tab"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_tab" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
